example/custom-metrics-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gardener-custom-metrics
  name: gardener-custom-metrics-debug
  namespace: garden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gardener-custom-metrics
      gardener.cloud/role: gardener-custom-metrics
  template:
    metadata:
      labels:
        app: gardener-custom-metrics
        gardener.cloud/role: gardener-custom-metrics
        networking.gardener.cloud/from-seed: allowed
        networking.gardener.cloud/to-dns: allowed
        networking.gardener.cloud/to-runtime-apiserver: allowed
        networking.resources.gardener.cloud/to-all-shoots-kube-apiserver-tcp-443: allowed
        networking.gardener.cloud/to-apiserver: allowed
    spec:
      containers:
        - args:
            - --secure-port=6443
            - --tls-cert-file=/var/run/secrets/gardener.cloud/tls/tls.crt
            - --tls-private-key-file=/var/run/secrets/gardener.cloud/tls/tls.key
            - --leader-election=false
            - --namespace=garden
            - --access-ip=$(POD_IP)
            - --access-port=6443
            - --debug
            - --log-level=75
          image: eu.gcr.io/gardener-project/gardener/gardener-custom-metrics:v0.10.9-dev
          imagePullPolicy: IfNotPresent
          name: gardener-custom-metrics
          ports:
            - containerPort: 6443
              name: metrics-server
              protocol: TCP
          resources:
            requests:
              cpu: 80m
              memory: 800Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /var/run/secrets/gardener.cloud/tls
              name: gardener-custom-metrics-tls
              readOnly: true
            - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
              name: kube-api-access-gardener
              readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: gardener-custom-metrics
      terminationGracePeriodSeconds: 30
      volumes:
        - name: gardener-custom-metrics-tls
          secret:
            secretName: gardener-custom-metrics-tls-121d8b86 # TODO: Andrey: P1: This is dynamic
        - name: kube-api-access-gardener
          projected:
            defaultMode: 420
            sources:
              - serviceAccountToken:
                  expirationSeconds: 43200
                  path: token
              - configMap:
                  items:
                    - key: ca.crt
                      path: ca.crt
                  name: kube-root-ca.crt
              - downwardAPI:
                  items:
                    - fieldRef:
                        apiVersion: v1
                        fieldPath: metadata.namespace
                      path: namespace
