example/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gardener-custom-metrics--ingress-from-vpn-shoot
  namespace: garden
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app: vpn-shoot
              gardener.cloud/role: system-component
      ports:
        - port: 6443
          protocol: TCP
  podSelector:
    matchLabels:
      app: gardener-custom-metrics
      gardener.cloud/role: gardener-custom-metrics
  policyTypes:
    - Ingress
